# adaptive-hermite-refinement

./: .clang-format  .gitignore  .gitmodules  README.md  REGK Summary.docx  apar_0.jld2  apar_10.jld2  apar_100.jld2  apar_1000.jld2  apar_10000.jld2  apar_1010.jld2  apar_1020.jld2  apar_1040.jld2  apar_1050.jld2  apar_1060.jld2  apar_1070.jld2  apar_1080.jld2  apar_1090.jld2  apar_110.jld2  apar_1100.jld2  apar_1120.jld2  apar_1130.jld2  apar_1160.jld2  apar_1170.jld2  apar_1180.jld2  apar_1190.jld2  apar_120.jld2  apar_1200.jld2  apar_12000.jld2  apar_1210.jld2  apar_1220.jld2  apar_1230.jld2  apar_1240.jld2  apar_1250.jld2  apar_1260.jld2  apar_1270.jld2  apar_1280.jld2  apar_1290.jld2  apar_130.jld2  apar_1300.jld2  (+941 more)
.github/workflows/: bench.yml  lint.yml  unit-test.yml
cpp/: .gitignore  CMakeLists.txt  CliParams.hpp  HermiteRunner.cpp  HermiteRunner.h  Naive.cpp  Naive.h  bench-fft-multi.cpp  bench-fft.cpp  cilk.h  constants.h  driver.cpp  equillibrium.h  nonlinears.h  profile.sh  test-triangle.cpp  typedefs.h
cpp/bench/: CMakeLists.txt  fftw-cilk.cpp  naive.cpp  timing.h
cpp/bench/fftw/: bench-fft-fusion.cpp  bench-fft-multi.cpp  bench-fft.cpp
cpp/fftw-cpp/: CMakeLists.txt  test-r2c-2d.cpp  test-wrapper-2d.cpp  test-wrapper.cpp  test.cpp
cpp/fftw-cpp/include/fftw-cpp/: basic_buffer.h  basic_buffer_impl.h  basic_plan.h  fftw-cpp.h  include_mdspan.h  util.h
cpp/lib/: test-triangle.cpp
cpp/test/: CMakeLists.txt  NaiveTester.hpp  naive-energies.cpp  naive-moments.cpp  naive.cpp  util.hpp
cpp/test/_test_data/: .gitignore  M10_X32_N20_nu0_10_res0_10_OT01_m0.npy  M10_X32_N20_nu0_10_res0_10_OT01_m1.npy  M10_X32_N20_nu0_10_res0_10_OT01_m2.npy  M10_X32_N20_nu0_10_res0_10_OT01_m3.npy  M10_X32_N20_nu0_10_res0_10_OT01_m4.npy  M10_X32_N20_nu0_10_res0_10_OT01_m5.npy  M10_X32_N20_nu0_10_res0_10_OT01_m6.npy  M10_X32_N20_nu0_10_res0_10_OT01_m7.npy  M10_X32_N20_nu0_10_res0_10_OT01_m8.npy  M10_X32_N20_nu0_10_res0_10_OT01_m9.npy  M10_X32_N20_nu0_10_res0_10_gauss_m0.npy  M10_X32_N20_nu0_10_res0_10_gauss_m1.npy  M10_X32_N20_nu0_10_res0_10_gauss_m2.npy  M10_X32_N20_nu0_10_res0_10_gauss_m3.npy  M10_X32_N20_nu0_10_res0_10_gauss_m4.npy  M10_X32_N20_nu0_10_res0_10_gauss_m5.npy  M10_X32_N20_nu0_10_res0_10_gauss_m6.npy  M10_X32_N20_nu0_10_res0_10_gauss_m7.npy  M10_X32_N20_nu0_10_res0_10_gauss_m8.npy  M10_X32_N20_nu0_10_res0_10_gauss_m9.npy  M10_X32_N20_nu0_10_res1_00_OT01_m0.npy  M10_X32_N20_nu0_10_res1_00_OT01_m1.npy  M10_X32_N20_nu0_10_res1_00_OT01_m2.npy  M10_X32_N20_nu0_10_res1_00_OT01_m3.npy  M10_X32_N20_nu0_10_res1_00_OT01_m4.npy  M10_X32_N20_nu0_10_res1_00_OT01_m5.npy  M10_X32_N20_nu0_10_res1_00_OT01_m6.npy  M10_X32_N20_nu0_10_res1_00_OT01_m7.npy  M10_X32_N20_nu0_10_res1_00_OT01_m8.npy  M10_X32_N20_nu0_10_res1_00_OT01_m9.npy  M10_X32_N20_nu0_10_res1_00_gauss_m0.npy  M10_X32_N20_nu0_10_res1_00_gauss_m1.npy  M10_X32_N20_nu0_10_res1_00_gauss_m2.npy  M10_X32_N20_nu0_10_res1_00_gauss_m3.npy  M10_X32_N20_nu0_10_res1_00_gauss_m4.npy  M10_X32_N20_nu0_10_res1_00_gauss_m5.npy  M10_X32_N20_nu0_10_res1_00_gauss_m6.npy  M10_X32_N20_nu0_10_res1_00_gauss_m7.npy  M10_X32_N20_nu0_10_res1_00_gauss_m8.npy  (+1570 more)
viriato/: #REGK.F90#  #aux.F90#  #diag.F90  Makefile  REGK.F90  aux.F90  aux.mod  brackets.F90  brackets.mod  constants.f90  constants.mod  contours.F90  diag.F90  diag.mod  example.in  fft_work.mod  fft_work_fftw.f90  fluxes.f90  fluxes.mod  forcing.f90  forcing.mod  functions.f90  functions.mod  grid.f90  grid.mod  h2v  h2v.F90  hlst_adios_checkpoint.F90  initialize.F90  initialize.mod  job.sh  mp.mod  mp_mpi_r8.f90  mpi_mod.F90  mpi_mod.mod  perfmacro.h  redistribute.mod  redistribute_mpi.f90  stepping.f90  stepping.mod  (+4 more)
viriato/av_modified/: REGK_avmod.F90  diag_avmod.F90
viriato_julia/: Brackets.jl  REGK.jl  aux.jl  constants.jl  diag.jl  diagnostics.jl  example_inputs.json  functions.jl  grid.jl  initialize.jl  plot_fields.jl  test_fft.jl  transforms.jl
